# serializer version: 1
# name: TestComparativeAnalysis.test_file_count_ratio
  dict({
    'dir_count_ratio': 2.135,
    'file_count_ratio': 0.5813333333333334,
    'filestore_dir_count': 200,
    'filestore_file_count': 375,
    'transfs_dir_count': 427,
    'transfs_file_count': 218,
  })
# ---
# name: TestMiSTerSystems.test_acorn_electron_structure
  dict({
    'directories': list([
      'HDs/',
      'Tapes/',
    ]),
    'files': list([
      'boot.vhd',
      'HDs/BEEB.vhd',
      'Tapes/Intro_E.uef',
    ]),
    'metadata': dict({
      'HDs/BEEB.vhd': dict({
        'extension': '.vhd',
        'is_symlink': False,
        'size': 104660992,
      }),
      'Tapes/Intro_E.uef': dict({
        'extension': '.uef',
        'is_symlink': False,
        'size': 58802,
      }),
      'boot.vhd': dict({
        'extension': '.vhd',
        'is_symlink': False,
        'size': 104660992,
      }),
    }),
    'root': '/mnt/transfs/MiSTer/AcornElectron',
    'sampled': True,
  })
# ---
# name: TestMiSTerSystems.test_bbc_micro_structure
  dict({
    'directories': list([
      'FDs/',
      'HDs/',
    ]),
    'files': list([
      'boot.vhd',
      'FDs/Arkanoid.ssd',
      'FDs/AroundTheWorldIn40ScreensP.ssd',
      'FDs/AticAtac.ssd',
      'FDs/AviatorColour.ssd',
      'FDs/BlockbustersDomark.ssd',
      'FDs/Boffin.ssd',
      'FDs/CastleQuest.ssd',
      'FDs/ChuckieEgg.ssd',
      'FDs/ChuckieEgg2.ssd',
      'FDs/Citadel.ssd',
      'HDs/BEEB.vhd',
    ]),
    'metadata': dict({
      'FDs/Arkanoid.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'FDs/AroundTheWorldIn40ScreensP.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'FDs/AticAtac.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'FDs/AviatorColour.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'FDs/BlockbustersDomark.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'FDs/Boffin.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'FDs/CastleQuest.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'FDs/ChuckieEgg.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'FDs/ChuckieEgg2.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'FDs/Citadel.ssd': dict({
        'extension': '.ssd',
        'is_symlink': False,
        'size': 204800,
      }),
      'HDs/BEEB.vhd': dict({
        'extension': '.vhd',
        'is_symlink': False,
        'size': 104660992,
      }),
      'boot.vhd': dict({
        'extension': '.vhd',
        'is_symlink': False,
        'size': 104660992,
      }),
    }),
    'root': '/mnt/transfs/MiSTer/BBCMicro',
    'sampled': True,
  })
# ---
# name: TestTransFSSnapshots.test_filestore_unchanged
  dict({
    'directories': list([
      'Native/',
      'Native/Acorn/',
      'Native/Amstrad/',
      'Native/MITS/',
      'Native/Tandy/',
      'Native/Acorn/Archimedes/',
      'Native/Acorn/Atom/',
      'Native/Acorn/BBC_B/',
      'Native/Acorn/Electron/',
      'Native/Acorn/Archimedes/Software/',
      'Native/Acorn/Atom/Software/',
      'Native/Acorn/BBC_B/Software/',
      'Native/Acorn/Electron/Software/',
      'Native/Amstrad/CPC/',
      'Native/Amstrad/PCW/',
      'Native/Amstrad/CPC/Software/',
      'Native/Amstrad/PCW/Software/',
      'Native/MITS/Altair8800/',
      'Native/MITS/Altair8800/Software/',
      'Native/Tandy/MC-10/',
      'Native/Tandy/MC-10/Software/',
    ]),
    'files': list([
      'Native/Acorn/Archimedes/tmp.tmp',
      'Native/Acorn/Archimedes/tmp2.tmp',
      'Native/Acorn/Archimedes/tmp3.tmp',
    ]),
    'metadata': None,
    'root': '/mnt/filestorefs',
    'sampled': True,
  })
# ---
# name: TestTransFSSnapshots.test_system_specific_structure[Native/Acorn/Archimedes]
  dict({
    'directories': list([
      'Software/',
      'Software/BIOS/',
      'Software/Collections/',
      'Software/HDF/',
      'Software/HDs/',
      'Software/Collections/4corn/',
      'Software/Collections/Icebird/',
      'Software/Collections/SIDKiddCROS4.2/',
      'Software/Collections/arcarc.nl/',
      'Software/Collections/tmp/',
    ]),
    'files': list([
      'tmp.tmp',
      'tmp2.tmp',
      'tmp3.tmp',
      'Software/BIOS/riscos.rom',
      'Software/BIOS/risocs-3.71.rom',
      'Software/HDF/CROS42.hdf',
      'Software/HDF/ICEBIRD.hdf',
      'Software/HDs/hubersn_diskimage.hdf',
    ]),
    'metadata': None,
    'root': '/mnt/transfs/Native/Acorn/Archimedes',
    'sampled': True,
  })
# ---
# name: TestTransFSSnapshots.test_system_specific_structure[Native/Acorn/Atom]
  dict({
    'directories': list([
      'Software/',
      'Software/Collections/',
      'Software/HDs/',
      'Software/Utils/',
      'Software/tmp/',
      'Software/Collections/hoglet67/',
      'Software/Utils/blank.zip/',
      'Software/tmp/unzipped_vhd/',
    ]),
    'files': list([
      'Software/HDs/hoglet.vhd',
    ]),
    'metadata': None,
    'root': '/mnt/transfs/Native/Acorn/Atom',
    'sampled': True,
  })
# ---
# name: TestTransFSSnapshots.test_system_specific_structure[Native/Acorn/Electron]
  dict({
    'directories': list([
      'Software/',
      'Software/ADF/',
      'Software/Collections/',
      'Software/DFS/',
      'Software/HFE/',
      'Software/MMB/',
      'Software/ROMS/',
      'Software/SSD/',
      'Software/UEF/',
      'Software/Collections/Acorn_Electronic_TOSEC_2012_04_23.zip/',
      'Software/Collections/Elk-PubGameADF.zip/',
      'Software/Collections/Elk-PubGameDFS.zip/',
      'Software/Collections/Elk-PubGameHFE.zip/',
      'Software/Collections/ElkBEEB.zip/',
      'Software/Collections/tmp/',
      'Software/ROMS/Acorn Electron Expansion ROM v1.00 (1984)(Acorn).zip/',
      'Software/ROMS/Acorn Electron Expansion ROM v1.00 (1984)(Acorn)[a].zip/',
      'Software/ROMS/Acorn Electron Expansion ROM v2.02 (1988)(Slogger).zip/',
      'Software/ROMS/Acorn Electron MOS (19xx)(-).zip/',
      'Software/ROMS/Acorn Electron OS (1983)(Acorn).zip/',
      'Software/ROMS/Acorn Electron OS (1983)(Acorn)[a].zip/',
      'Software/ROMS/Acorn Electron Plus 1 Expansion ROM v1.1.1.7 (1984)(Acorn).zip/',
      'Software/ROMS/Acorn Electron Plus 1 Expansion ROM v1.1.2.3 (19xx)(-).zip/',
      'Software/ROMS/View v1.0 (1984)(Protechnic).zip/',
      'Software/ROMS/ViewSheet v1.0 (1984)(Kings).zip/',
      'Software/SSD/Adventure (1983)(Program Power).zip/',
      'Software/SSD/Airlift (19xx)(Superior Software)[b].zip/',
      'Software/SSD/Alien Dropout (1982)(Hanson, R.M.P.).zip/',
      'Software/SSD/Alphatron (19xx)(Program Power).zip/',
      'Software/SSD/Ballistix (1989)(Acornsoft - Superior Software).zip/',
      'Software/SSD/Bar Billiards (1987)(Blue Riboon).zip/',
      'Software/SSD/Blast! (1989)(Audiogenic).zip/',
      'Software/SSD/Blitzkrieg (1984)(Software Invasion).zip/',
      'Software/SSD/Boffins 2 - Brilliant Bouncing Boffins (1985)(Addictive Game).zip/',
      'Software/SSD/Bonecruncher (19xx)(Superior Software).zip/',
      'Software/UEF/Apps/',
      'Software/UEF/CoverTapes/',
      'Software/UEF/Demos/',
      'Software/UEF/Educational/',
      'Software/UEF/Games/',
    ]),
    'files': list([
      'Software/ADF/A-BRAI.adf',
      'Software/ADF/A-CODE.adf',
      'Software/ADF/A-COLL.adf',
      'Software/ADF/A-CRAZ.adf',
      'Software/ADF/A-DATAB.adf',
      'Software/ADF/A-DREA.adf',
      'Software/ADF/A-ELIX.adf',
      'Software/ADF/A-HITS1.adf',
      'Software/ADF/A-KANS1.adf',
      'Software/ADF/A-LARSO.adf',
      'Software/MMB/rayharper.mmb',
    ]),
    'metadata': None,
    'root': '/mnt/transfs/Native/Acorn/Electron',
    'sampled': True,
  })
# ---
# name: TestTransFSSnapshots.test_system_specific_structure[Native/Amstrad/CPC]
  dict({
    'directories': list([
      'Software/',
      'Software/BIOS/',
      'Software/CPR/',
      'Software/Collections/',
      'Software/DSK/',
      'Software/Disks/',
      'Software/ROM/',
      'Software/tmp/',
      'Software/CPR/Batman - The Movie (1989)(Ocean Software).zip/',
      'Software/CPR/Burning Rubber (1990)(Ocean Software).zip/',
      'Software/CPR/Copter 271 (1991)(Loriciels).zip/',
      'Software/CPR/Crazy Cars II (1990)(Titus).zip/',
      'Software/CPR/Epyx World of Sports (1990)(US Gold).zip/',
      'Software/CPR/Klax (1990)(Domark).zip/',
      'Software/CPR/Navy SEALs (1991)(Ocean Software).zip/',
      'Software/CPR/No Exit (1990)(CVS).zip/',
      'Software/CPR/Operation Thunderbolt (1991)(Ocean Software).zip/',
      'Software/CPR/Pang (1990)(Ocean Software).zip/',
      'Software/Collections/Amstrad_CPC_TOSEC_2012_04_23.zip/',
      'Software/DSK/007 - A View to a Kill (1985)(Domark).zip/',
      'Software/DSK/007 - A View to a Kill (1985)(Domark)[a].zip/',
      'Software/DSK/007 - Licence to Kill (1989)(Domark).zip/',
      'Software/DSK/007 - Licence to Kill (1989)(Domark)[cr CACH].zip/',
      'Software/DSK/007 - Live and Let Die (1988)(Domark).zip/',
      'Software/DSK/007 - Live and Let Die (1988)(Domark)[cr Celtic Gang].zip/',
      'Software/DSK/007 - Live and Let Die (1988)(Domark)[cr XOR][t +2 XOR].zip/',
      'Software/DSK/007 - The Living Daylights (1987)(Domark).zip/',
      'Software/DSK/007 - The Living Daylights (1987)(Domark)[cr Crackedman].zip/',
      'Software/DSK/007 - The Living Daylights (1987)(Domark)[cr XOR][t +2 XOR].zip/',
      'Software/Disks/Amstrad_CPC_TOSEC_2012_04_23.zip/',
      'Software/ROM/Amram 2 - Sideways RAM Toolkit ROM (19xx)(Silicon Systems)[AMRAM2.ROM].zip/',
      'Software/ROM/Amsdos 720k (19xx)(-)[720KAMSD.ROM].zip/',
      'Software/ROM/Amstrad CPC 464 BASIC (1985)(Amstrad)[BASIC.ROM].zip/',
      'Software/ROM/Amstrad CPC 464 OS (1985)(Amstrad)[OS.ROM].zip/',
      'Software/ROM/Amstrad CPC 464 OS (19xx)(Amstrad)(da)[h][CPC464DK.ROM].zip/',
      'Software/ROM/Amstrad CPC 464+ Plus A2 OS (1991)(Amstrad)[ROMPLUSADOS.ROM].zip/',
      'Software/ROM/Amstrad CPC 464+ and 6128+ BASIC (1991)(Amstrad)[BASIC.ROM].zip/',
      'Software/ROM/Amstrad CPC 464+ and 6128+ OS (1991)(Amstrad)[OS.ROM].zip/',
      'Software/ROM/Amstrad CPC 6128 BASIC (1985)(Amstrad)(es)[BASIC.ROM].zip/',
      'Software/ROM/Amstrad CPC 6128 BASIC (1985)(Amstrad)(fr)[FBASIC.ROM].zip/',
    ]),
    'files': list([
      'Software/BIOS/boot.rom',
      'Software/BIOS/cpc464nd.eZ0',
    ]),
    'metadata': None,
    'root': '/mnt/transfs/Native/Amstrad/CPC',
    'sampled': True,
  })
# ---
# name: TestTransFSSnapshots.test_system_specific_structure[Native/Amstrad/PCW]
  dict({
    'directories': list([
      'Software/',
      'Software/Collections/',
      'Software/DSK/',
      'Software/Disks/',
      'Software/tmp/',
    ]),
    'files': list([
      'Software/Collections/Amstrad_PCW_8256_Games_Archive.tar.gz',
      'Software/DSK/2048.dsk',
      'Software/DSK/3D Clock Chess.dsk',
      'Software/DSK/ACE Boot.dsk',
      'Software/DSK/ACE.dsk',
      'Software/DSK/Abadia.dsk',
      'Software/DSK/After Shock 0.dsk',
      'Software/DSK/After Shock A.dsk',
      'Software/DSK/After Shock B.dsk',
      'Software/DSK/Angel Nieto Pole 500.dsk',
      'Software/DSK/Antigrad.dsk',
    ]),
    'metadata': None,
    'root': '/mnt/transfs/Native/Amstrad/PCW',
    'sampled': True,
  })
# ---
# name: TestTransFSSnapshots.test_system_specific_structure[Native/MITS/Altair8800]
  dict({
    'directories': list([
      'Software/',
      'Software/BAS/',
      'Software/BIN/',
      'Software/CAS/',
      'Software/Collections/',
      'Software/DSK/',
      'Software/HEX/',
      'Software/TAP/',
      'Software/tmp/',
      'Software/BAS/Baccarat (1975-11-06)(Kurland, D.).zip/',
      'Software/BAS/Backgammon (1981-08)(Soon, Bill).zip/',
      'Software/BAS/Baseball (1973-12)(Kurland, D.).zip/',
      'Software/BAS/Black Jack (19xx)(-).zip/',
      'Software/BAS/Chase (19xx)(-).zip/',
      'Software/BAS/Chess (1976-01)(Miller, Randy).zip/',
      'Software/BAS/Civil War (19xx)(-).zip/',
      'Software/BAS/Craps (1975-11-16)(Kurland, D.).zip/',
      'Software/BAS/Craps (19xx)(-)[4k].zip/',
      'Software/BAS/Crazy Eights (1975-11-16)(Kurland, D.).zip/',
      'Software/BIN/4D Tic-Tac-Toe (19xx)(-)[dazzler output][$0000].zip/',
      'Software/BIN/Altair Basic v3.2 (19xx)(MITS)[4k version].zip/',
      'Software/BIN/Altair Basic v4.0 (1976)(MITS)[8k version].zip/',
      'Software/BIN/Altair Basic v4.0 (1977)(MITS)[extended version].zip/',
      'Software/BIN/Altair Basic v5.0 (1978-07-14)(MITS)[disk extended version].zip/',
      'Software/BIN/Cross & Circle v1.0 (1976-08-30)(-)[dazzler output][$0000].zip/',
      'Software/BIN/Doodle (19xx)(-)[dazzler output][$0200].zip/',
      'Software/BIN/Gotcha (19xx)(-)[dazzler output][$0000].zip/',
      'Software/BIN/Spacewar (19xx)(-)[dazzler output][$0000].zip/',
      'Software/BIN/Track (19xx)(-)[dazzler output][$0000].zip/',
      'Software/CAS/Altair Basic v3.2 (19xx)(MITS)[4k version].zip/',
      'Software/Collections/MITS_Altair_8800_TOSEC_2012_04_23.zip/',
      'Software/DSK/Altair Basic v4.1 (1977)(MITS)[disk extended version].zip/',
      'Software/DSK/Altair Basic v5.0 (1978-07-14)(MITS)[disk extended version].zip/',
      'Software/DSK/Altair Disk Extended Basic v300-5-C (1978-11-01)(MITS).zip/',
      'Software/DSK/Applications (19xx)(-).zip/',
      'Software/DSK/CP-M v2.2 (19xx)(Digital Research).zip/',
      'Software/DSK/CP-M v2.2 (19xx)(Digital Research)[HD].zip/',
      'Software/DSK/Cobol v4.65 (1980)(Microsoft).zip/',
      'Software/DSK/Dos Monitor v1.0 (1977)(MITS).zip/',
      'Software/DSK/Felix v2.1 (1979-08-14)(-)[dazzler output].zip/',
      'Software/DSK/Fortran-80 (1977-07-01)(Microsoft).zip/',
      'Software/HEX/4k Basic Cassette Loader (19xx)(MITS).zip/',
      'Software/HEX/4k Basic Papertape Loader (19xx)(MITS).zip/',
      'Software/HEX/8k Basic Cassette Loader (19xx)(MITS).zip/',
      'Software/HEX/8k Basic Papertape Loader (19xx)(MITS).zip/',
      'Software/HEX/Altair 88-DSK Boot Rom (19xx)(MITS)[bin].zip/',
      'Software/HEX/Altair 88-DSK Boot Rom (19xx)(MITS)[hex].zip/',
      'Software/HEX/MITS 88-LPC Printer Test (2004-06-26)(LaBombard, Scott).zip/',
      'Software/TAP/Altair Basic v3.2 (19xx)(MITS)[4k version].zip/',
    ]),
    'files': list([
    ]),
    'metadata': None,
    'root': '/mnt/transfs/Native/MITS/Altair8800',
    'sampled': True,
  })
# ---
# name: TestTransFSSnapshots.test_system_specific_structure[Native/Tandy/MC-10]
  dict({
    'directories': list([
      'Software/',
      'Software/c10/',
    ]),
    'files': list([
      'Software/c10/10PRINMC.C10',
      'Software/c10/10PRINT.C10',
      'Software/c10/10PRINT2.C10',
      'Software/c10/2048.C10',
      'Software/c10/23MTCH.C10',
      'Software/c10/3DLABY.C10',
      'Software/c10/3RDWW.C10',
      'Software/c10/4KINVADE.C10',
      'Software/c10/4MILE.C10',
      'Software/c10/5CARD.C10',
    ]),
    'metadata': None,
    'root': '/mnt/transfs/Native/Tandy/MC-10',
    'sampled': True,
  })
# ---
# name: TestTransFSSnapshots.test_transfs_directory_counts
  dict({
    'directory_list': list([
      'Mame/',
      'MiSTer/',
      'MiSTer/AcornAtom/',
      'MiSTer/AcornAtom/HDs/',
      'MiSTer/AcornAtom/Software/',
      'MiSTer/AcornElectron/',
      'MiSTer/AcornElectron/HDs/',
      'MiSTer/AcornElectron/Tapes/',
      'MiSTer/AcornElectron/Tapes/Apps/',
      'MiSTer/AcornElectron/Tapes/CoverTapes/',
      'MiSTer/AcornElectron/Tapes/Demos/',
      'MiSTer/AcornElectron/Tapes/Educational/',
      'MiSTer/AcornElectron/Tapes/Games/',
      'MiSTer/AliceMC10/',
      'MiSTer/AliceMC10/Tapes/',
      'MiSTer/Altair8800/',
      'MiSTer/Altair8800/ROMs/',
      'MiSTer/Amiga/',
      'MiSTer/Amiga/FDs/',
      'MiSTer/Amiga/HDs/',
      'MiSTer/Amstrad PCW/',
      'MiSTer/Amstrad PCW/FDs/',
      'MiSTer/Amstrad/',
      'MiSTer/Amstrad/Disks/',
      'MiSTer/Amstrad/Disks/Compilations/',
      'MiSTer/Amstrad/Disks/Demos/',
      'MiSTer/Amstrad/Disks/PD/',
      'MiSTer/AppleII/',
      'MiSTer/AppleII/Disks/',
      'MiSTer/Archie/',
      'MiSTer/Archie/FDs/',
      'MiSTer/Archie/HDs/',
      'MiSTer/Atari2600/',
      'MiSTer/Atari2600/ROMs/',
      'Native/',
      'Native/Acorn/',
      'Native/Acorn/Archimedes/',
      'Native/Acorn/Archimedes/Software/',
      'Native/Acorn/Atom/',
      'Native/Acorn/Atom/Software/',
      'Native/Acorn/BBC_B/',
      'Native/Acorn/BBC_B/Software/',
      'Native/Acorn/Electron/',
      'Native/Acorn/Electron/Software/',
      'Native/Amstrad/',
      'Native/Amstrad/CPC/',
      'Native/Amstrad/CPC/Software/',
      'Native/Amstrad/PCW/',
      'Native/Amstrad/PCW/Software/',
      'Native/MITS/',
      'Native/MITS/Altair8800/',
      'Native/MITS/Altair8800/Software/',
      'Native/Tandy/',
      'Native/Tandy/MC-10/',
      'Native/Tandy/MC-10/Software/',
      'RetroBat/',
      'RetroPie/',
    ]),
    'file_list': list([
      'MiSTer/AcornAtom/HDs/hoglet.vhd',
      'MiSTer/AcornAtom/boot.vhd',
      'MiSTer/AcornElectron/HDs/rayharper.mmb',
      'MiSTer/AcornElectron/boot.vhd',
      'MiSTer/AliceMC10/Tapes/10PRINMC.c10',
      'MiSTer/AliceMC10/Tapes/10PRINT.c10',
      'MiSTer/AliceMC10/Tapes/10PRINT2.c10',
      'MiSTer/AliceMC10/Tapes/2048.c10',
      'MiSTer/AliceMC10/Tapes/23MTCH.c10',
      'MiSTer/AliceMC10/Tapes/3DLABY.c10',
      'MiSTer/AliceMC10/Tapes/3RDWW.c10',
      'MiSTer/AliceMC10/Tapes/4KINVADE.c10',
      'MiSTer/AliceMC10/Tapes/4MILE.c10',
      'MiSTer/AliceMC10/Tapes/5CARD.c10',
      'MiSTer/Amiga/KICK.ROM',
      'MiSTer/Amstrad PCW/FDs/2048.dsk',
      'MiSTer/Amstrad PCW/FDs/3D Clock Chess.dsk',
      'MiSTer/Amstrad PCW/FDs/ACE Boot.dsk',
      'MiSTer/Amstrad PCW/FDs/ACE.dsk',
      'MiSTer/Amstrad PCW/FDs/Abadia.dsk',
      'MiSTer/Amstrad PCW/FDs/After Shock 0.dsk',
      'MiSTer/Amstrad PCW/FDs/After Shock A.dsk',
      'MiSTer/Amstrad PCW/FDs/After Shock B.dsk',
      'MiSTer/Amstrad PCW/FDs/Angel Nieto Pole 500.dsk',
      'MiSTer/Amstrad PCW/FDs/Antigrad.dsk',
      'MiSTer/Amstrad/boot.rom',
      'MiSTer/Amstrad/cpc464nd.eZ0',
      'MiSTer/Archie/HDs/CROS42.hdf',
      'MiSTer/Archie/HDs/ICEBIRD.hdf',
      'MiSTer/Archie/riscos.rom',
      'MiSTer/Archie/tmp.tmp',
      'MiSTer/Archie/tmp2.tmp',
      'MiSTer/Archie/tmp3.tmp',
      'Native/Acorn/Archimedes/tmp.tmp',
      'Native/Acorn/Archimedes/tmp2.tmp',
      'Native/Acorn/Archimedes/tmp3.tmp',
    ]),
    'sampled': True,
    'total_directories': 57,
    'total_files': 36,
  })
# ---
# name: TestTransFSSnapshots.test_transfs_root_structure
  dict({
    'directories': list([
      'Mame/',
      'MiSTer/',
      'Native/',
      'RetroBat/',
      'RetroPie/',
      'MiSTer/AcornAtom/',
      'MiSTer/AcornElectron/',
      'MiSTer/AliceMC10/',
      'MiSTer/Altair8800/',
      'MiSTer/Amiga/',
      'MiSTer/Amstrad/',
      'MiSTer/Amstrad PCW/',
      'MiSTer/AppleII/',
      'MiSTer/Archie/',
      'MiSTer/Atari2600/',
      'Native/Acorn/',
      'Native/Amstrad/',
      'Native/MITS/',
      'Native/Tandy/',
    ]),
    'files': list([
    ]),
    'metadata': None,
    'root': '/mnt/transfs',
    'sampled': True,
  })
# ---
# name: TestTransFSWithMetadata.test_symlink_detection
  list([
  ])
# ---
# name: TestTransFSWithMetadata.test_virtual_file_extensions
  dict({
    '': list([
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/BARNET/FREENET/ALLEN_J/MESSAGE',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/BARNET/FREENET/LAWTON/MESSAGE',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/STUTTGART/COMM/INTERNET/STACK/OLD/README',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/STUTTGART/GRAPHICS/PICTURES/CLIPART07',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/STUTTGART/GRAPHICS/PICTURES/CLIPART20',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/STUTTGART/MAGAZINE/GERMAN/ARMM/ARMM2-2',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/STUTTGART/MAGAZINE/GERMAN/ARMM/README',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/STUTTGART/TEX-DIST/!TARZ/WORK/PATH',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/WEBSITES/VANDERGEER/PLANNER/!PLANNER/LOGFILE',
    ]),
    '.7z': list([
      'Native/Acorn/Archimedes/Software/Collections/Icebird/ICEBIRD.7z',
      'Native/Acorn/Archimedes/Software/Collections/SIDKiddCROS4.2/CROS42_082620.7z',
    ]),
    '.7z?dl=1': list([
      'Native/Acorn/Archimedes/Software/Collections/Icebird/ICEBIRD.7z?dl=1',
      'Native/Acorn/Archimedes/Software/Collections/SIDKiddCROS4.2/CROS42_082620.7z?dl=1',
    ]),
    '.ARC': list([
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/DEMON/HAMRADIO/PSCAN_1.ARC',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/DEMON/HAMRADIO/SSTV.ARC',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/HENSA/ICONS/SOLIDRAG.ARC',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/HENSA/ICONS/WINICON.ARC',
    ]),
    '.C10': list([
      'Native/Tandy/MC-10/Software/c10/10PRINMC.C10',
      'Native/Tandy/MC-10/Software/c10/10PRINT.C10',
      'Native/Tandy/MC-10/Software/c10/10PRINT2.C10',
      'Native/Tandy/MC-10/Software/c10/2048.C10',
      'Native/Tandy/MC-10/Software/c10/23MTCH.C10',
      'Native/Tandy/MC-10/Software/c10/3DLABY.C10',
      'Native/Tandy/MC-10/Software/c10/3RDWW.C10',
      'Native/Tandy/MC-10/Software/c10/4KINVADE.C10',
      'Native/Tandy/MC-10/Software/c10/4MILE.C10',
      'Native/Tandy/MC-10/Software/c10/5CARD.C10',
    ]),
    '.ROM': list([
      'MiSTer/Amiga/KICK.ROM',
    ]),
    '.SSD': list([
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/4th Dimension/4THD-HOLOUT0.SSD',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/4th Dimension/4THD-HOLOUT2.SSD',
    ]),
    '.TXT': list([
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/DEMON/HAMRADIO/INDEX.TXT',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/DEMON/HAMRADIO/PSCAN.TXT',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/HENSA/ICONS/SOLIDRAG.TXT',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/HENSA/ICONS/WIMPSPRS.TXT',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/HENSA/ICONS/WINICON.TXT',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/HENSA/MISC/MODEX.TXT',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Archives to Sort/HENSA/PROGRAMMING/BANNER.TXT',
    ]),
    '.adf': list([
      'Native/Acorn/Electron/Software/ADF/A-BRAI.adf',
      'Native/Acorn/Electron/Software/ADF/A-CODE.adf',
      'Native/Acorn/Electron/Software/ADF/A-COLL.adf',
      'Native/Acorn/Electron/Software/ADF/A-CRAZ.adf',
      'Native/Acorn/Electron/Software/ADF/A-DATAB.adf',
      'Native/Acorn/Electron/Software/ADF/A-DREA.adf',
      'Native/Acorn/Electron/Software/ADF/A-ELIX.adf',
      'Native/Acorn/Electron/Software/ADF/A-HITS1.adf',
      'Native/Acorn/Electron/Software/ADF/A-KANS1.adf',
      'Native/Acorn/Electron/Software/ADF/A-LARSO.adf',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameADF/alt_soft/HA-CRAZ.adf',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameADF/alt_soft/HA-FRAK.adf',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameADF/alt_soft/HA-ZALA.adf',
    ]),
    '.c10': list([
      'MiSTer/AliceMC10/Tapes/10PRINMC.c10',
      'MiSTer/AliceMC10/Tapes/10PRINT.c10',
      'MiSTer/AliceMC10/Tapes/10PRINT2.c10',
      'MiSTer/AliceMC10/Tapes/2048.c10',
      'MiSTer/AliceMC10/Tapes/23MTCH.c10',
      'MiSTer/AliceMC10/Tapes/3DLABY.c10',
      'MiSTer/AliceMC10/Tapes/3RDWW.c10',
      'MiSTer/AliceMC10/Tapes/4KINVADE.c10',
      'MiSTer/AliceMC10/Tapes/4MILE.c10',
      'MiSTer/AliceMC10/Tapes/5CARD.c10',
    ]),
    '.dsk': list([
      'MiSTer/Amstrad PCW/FDs/2048.dsk',
      'MiSTer/Amstrad PCW/FDs/3D Clock Chess.dsk',
      'MiSTer/Amstrad PCW/FDs/ACE Boot.dsk',
      'MiSTer/Amstrad PCW/FDs/ACE.dsk',
      'MiSTer/Amstrad PCW/FDs/Abadia.dsk',
      'MiSTer/Amstrad PCW/FDs/After Shock 0.dsk',
      'MiSTer/Amstrad PCW/FDs/After Shock A.dsk',
      'MiSTer/Amstrad PCW/FDs/After Shock B.dsk',
      'MiSTer/Amstrad PCW/FDs/Angel Nieto Pole 500.dsk',
      'MiSTer/Amstrad PCW/FDs/Antigrad.dsk',
      'Native/Amstrad/PCW/Software/DSK/2048.dsk',
      'Native/Amstrad/PCW/Software/DSK/3D Clock Chess.dsk',
      'Native/Amstrad/PCW/Software/DSK/ACE Boot.dsk',
      'Native/Amstrad/PCW/Software/DSK/ACE.dsk',
      'Native/Amstrad/PCW/Software/DSK/Abadia.dsk',
      'Native/Amstrad/PCW/Software/DSK/After Shock 0.dsk',
      'Native/Amstrad/PCW/Software/DSK/After Shock A.dsk',
      'Native/Amstrad/PCW/Software/DSK/After Shock B.dsk',
      'Native/Amstrad/PCW/Software/DSK/Angel Nieto Pole 500.dsk',
      'Native/Amstrad/PCW/Software/DSK/Antigrad.dsk',
    ]),
    '.eZ0': list([
      'MiSTer/Amstrad/cpc464nd.eZ0',
      'Native/Amstrad/CPC/Software/BIOS/cpc464nd.eZ0',
    ]),
    '.gz': list([
      'Native/Amstrad/PCW/Software/Collections/Amstrad_PCW_8256_Games_Archive.tar.gz',
    ]),
    '.hdf': list([
      'MiSTer/Archie/HDs/CROS42.hdf',
      'MiSTer/Archie/HDs/ICEBIRD.hdf',
      'Native/Acorn/Archimedes/Software/HDF/CROS42.hdf',
      'Native/Acorn/Archimedes/Software/HDF/ICEBIRD.hdf',
      'Native/Acorn/Archimedes/Software/HDs/hubersn_diskimage.hdf',
    ]),
    '.hfe': list([
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/4thdimension/HA-INER_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/ElkAdvntrClub/HA-KOLT_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/ElkAdvntrClub/HA-MAGN_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/ElkAdvntrClub/HA-RELU_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/ElkAdvntrClub/HA-ROHA_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/ElkAdvntrClub/HA-SQUE_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/aardvark/HA-FRAK_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/aardvark/HA-ZALA_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/A-DATAB_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/A-HITS1_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/A-PLUS3_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/A-PRES4_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/A-PRES5_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/HA-BOXE_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/HA-BUSI_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/HA-CHE1_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/HA-COMP_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/acornsoft/HA-CRAZ_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-10LI_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-ADVL_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-AOBB_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-ARR1_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-ARR2_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-CIRC_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-CONT_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-EFP7_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-FEAS_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/advnt_int/HA-GBAT_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-BLAG_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-BUGB_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-DPET_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-FRUI_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-GUAR_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-HELL_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-LUNA_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-PRIM_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-QBIX_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alligata/HA-TARB_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alt_soft/HA-BUG2_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alt_soft/HA-CRAZ_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alt_soft/HA-FRAK_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alt_soft/HA-GI2_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alt_soft/HA-LICE_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alt_soft/HA-NSTR_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/alt_soft/HA-ZALA_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/anco/HA-THAI_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/anf/HA-CHUC_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/anf/HA-CYLO_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/anf/HA-KAMA_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/anf/HA-PHAR_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/artic/HA-TGW_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/artic/HA-VALL_adf.hfe',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameHFE/artic/HA-WOKS_adf.hfe',
    ]),
    '.mmb': list([
      'MiSTer/AcornElectron/HDs/rayharper.mmb',
      'Native/Acorn/Electron/Software/MMB/rayharper.mmb',
    ]),
    '.rom': list([
      'MiSTer/Amstrad/boot.rom',
      'MiSTer/Archie/riscos.rom',
      'Native/Acorn/Archimedes/Software/BIOS/riscos.rom',
      'Native/Acorn/Archimedes/Software/BIOS/risocs-3.71.rom',
      'Native/Amstrad/CPC/Software/BIOS/boot.rom',
    ]),
    '.ssd': list([
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/4th Dimension/4THD-ARCDSCR.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/4th Dimension/4THD-E_TYPE.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/AaB/AB-2-ADVENTR.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/AaB/AB-DUNGEON.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/AaB/AB-MURD-RIPT.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/AaB/AB-MUSCNICON.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Aardvark/AARD-FRAKZAL.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACN-ARCBOXCT.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACN-BGMPDANM.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACN-CHSDRREV.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACN-CORSNKSA.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACN-ELTFFBGO.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACN-HOPRMMRM.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACN-LISPSPAS.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACN-SNAPSCOM.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACNMAZMTRMON.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Acornsoft/ACNPLANPQPOD.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Addictive/AD-BOF-FBMAN.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Int/AI-ALABBFFGT.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Int/AI-GREMLINS.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Int/AI-GVOYMFHIH.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Int/AI-PADVPODTC.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Int/AI-SI1SMANRS.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Int/AI-SI2SMNSCC.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Int/AI-STRODVODC.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Soft/AS-AD1CRCEP7.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Soft/AS-FEXTLITMW.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Adventure Soft/ASAD2GBPAWIZ.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/Starcade/SC-EWGRSPOND.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/US Gold/US-BHDIMPMKL.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/US Gold/US-CRYSCREBP.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/alligata/AL-BUDG-APK1.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/alligata/AL-BUGCJHHLR.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/alligata/AL-CBRDGFMCN.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/alligata/AL-DPTQBXTBY.ssd',
      'Native/Acorn/Electron/Software/Collections/tmp/unzipped_software/Elk-PubGameDFS/alligata/AL-PRIMARYAT.ssd',
    ]),
    '.tmp': list([
      'MiSTer/Archie/tmp.tmp',
      'MiSTer/Archie/tmp2.tmp',
      'MiSTer/Archie/tmp3.tmp',
      'Native/Acorn/Archimedes/tmp.tmp',
      'Native/Acorn/Archimedes/tmp2.tmp',
      'Native/Acorn/Archimedes/tmp3.tmp',
    ]),
    '.txt': list([
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/A/ArcPlay (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/A/Audio CD collection (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/A/Avalanche (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/B/BlankAid (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/C/ClickIt (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/C/Conceal (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/C/Crazy Pointer (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/D/DeskBarVu (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/D/Disc Commander (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/D/DtLHARC (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/E/Elc2 (FR) - Electron Emulator/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/F/FontFix (FR) - E Poor/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/I/Illustrated Holy Bible, The (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/K/Key Window (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/L/LADSPAMan (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/M/MPEG (FR) - Paul LeBeau/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Apps/M/MouseAxes/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Games/B/Blimp (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Games/B/Botkiller (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Games/B/Botkiller 2 Demo (FR)/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Games/H/Hawkridge Labyrinth Demo (FR)/desc.txt',
      "Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Games/L/Luke's Quest (FR)/desc.txt",
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Games/M/Memory Magic/desc.txt',
      'Native/Acorn/Archimedes/Software/Collections/arcarc.nl/archive/Themes/T/ThemeInst (FR)/desc.txt',
    ]),
    '.vhd': list([
      'MiSTer/AcornAtom/HDs/hoglet.vhd',
      'MiSTer/AcornAtom/boot.vhd',
      'MiSTer/AcornElectron/boot.vhd',
      'Native/Acorn/Atom/Software/HDs/hoglet.vhd',
    ]),
  })
# ---
